syntax = "proto3";

package raftpb;

import "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;

// Raft defines the RPC communication between raft nodes.
service Raft {
  rpc Message (stream Chunk) returns (google.protobuf.Empty) {}
  rpc Snapshot (stream Chunk) returns (google.protobuf.Empty) {}
  rpc Join (Member) returns (stream Member) {}
  rpc PromoteMember(Member) returns (google.protobuf.Empty) {}
}

message Member {
	// ID specifies the cluster memeber id.
	uint64 id = 1 [(gogoproto.customname) = "ID" ];
	// Address specifies the address of the cluster member.
	string addr = 2 [(gogoproto.customname) = "Address" ];
	// Type used to distinguish members (local, remote, etc).
	MemberType type = 3;
	// Context is treated as an opaque payload and can be used to
	// attach an extra info/data on member. 
	bytes  context  = 4;
}

message Replicate {
	// CID specifies the transaction change id. 
	uint64 cid = 1 [(gogoproto.customname) = "CID" ];
	// Data specifies the raw replicate data.
	bytes  data  = 2;
}


enum MemberType {
	option (gogoproto.enum_customname) = "MemberType";
	remote = 0 [(gogoproto.enumvalue_customname) = "RemoteMember"];
	removed = 1 [(gogoproto.enumvalue_customname) = "RemovedMember"];
	local = 2 [(gogoproto.enumvalue_customname) = "LocalMember"];
	localLearner = 3 [(gogoproto.enumvalue_customname) = "LocalLearnerMember"];
	learner = 4 [(gogoproto.enumvalue_customname) = "LearnerMember"];
}


// Pool specifies the the cluster pool members.
message Pool {
	repeated Member members = 1 [(gogoproto.nullable) = false];
}

message Chunk {
	// Index specifies the chunk index.
	uint64  index = 1; 
	// Data specifies the raw chunk data.
	bytes  data  = 2 ;
}

message SnapshotHeader {
	// Version represents the snapshot file version.
	enum Version {
		// V0 is the initial version of the snapshot file.
		V0 = 0;
	}
	// CRC specifies the snapshot crc sum.
	bytes  CRC  = 1;
	// Version specifies the snapshot file version.
	Version version = 2;
}